--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -2927,3 +2927,11 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...46B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Keeling2004,
+   author = {{Keeling}, C., D. and {Whorf}, T., P.},
+    title = "{Atmospheric CO2 from Continuous Air Samples at Mauna Loa Observatory, Hawaii, U.S.A.}",
+  journal = {Carbon Dioxide Information Analysis Center, Oak Ridge National Laboratory},
+     year = 2004,
+    month = Oct}
+}
