--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -70,16 +70,15 @@ processes}
    Daniel Foreman-Mackey\altaffilmark{\uw,\sagan}
    \& Vinesh Rajpaul\altaffilmark{\oxford}
 }
-
 \altaffiltext{\columbia}{Simons Fellow, Department of Astronomy, Columbia
 University, NY, NY, RuthAngus@gmail.com}
 \altaffiltext{\princeton}{Department of Astrophysical Sciences, Princeton
 University,  Princeton, NJ}
 \altaffiltext{\oxford}{Subdepartment of Astrophysics, University of Oxford,
 UK}
+\altaffiltext{\uw}{Department of Astronomy, University of
+Washington, Seattle, WA}
 \altaffiltext{\sagan}{Sagan Fellow}
-\altaffiltext{\uw}{Department of Astronomy, University of Washington, Seattle,
-WA}
 
 \begin{abstract}
 The light curves of spotted, rotating stars often vary in a non-sinusoidal and
@@ -97,7 +96,7 @@ Using this highly flexible model, we are able to sample from the posterior
     Probability Density Function (PDF) of the periodic parameter,
     marginalising over the other kernel hyperparameters using a Markov Chain
     Monte Carlo approach.
-To test this method's effectiveness, we infer rotation periods from
+To test the effectiveness of this method, we infer rotation periods from
 \naigrain\ simulated stellar light curves, demonstrating that our results
     are more accurate than both a sine-fitting periodogram and an
     AutoCorrelation Function (ACF) method.
@@ -124,10 +123,10 @@ rotate in and out of view.
 Complicated surface spot patterns produce non-sinusoidal variations,
 and the finite lifetimes of these active regions and
 differential rotation on the stellar surface produce quasi-periodicity.
-A strictly periodic sinusoid therefore does not well describe
-rotationally modulated stellar light curves.
+A strictly periodic sinusoid is therefore not necessarily a good model choice
+for these time-series.
 A physically realistic model of the stellar surface
-would ideally perfectly capture the complexity of shapes
+would, ideally,  perfectly capture the complexity of shapes
 within stellar light curves as well as the quasi-periodic nature, allowing for
 extremely precise probabilistic period recovery when conditioned on the data.
 However, such physical models require many free parameters in order to
@@ -136,9 +135,9 @@ extremely degenerate \citep[\eg][]{Russell1906, Jeffers2009, Kipping2012}.
 In addition to global stellar parameters such as inclination and rotation
 period, each spot or active region should have (at minimum) a longitude,
 latitude, size, temperature and lifetime.
-Considering that stars may have hundreds of spots, the number
-of free parameters in such a model quickly becomes unwieldy, especially to explore
-its posterior probability distribution function (PDF).
+Considering that stars may have hundreds of spots, the number of free
+parameters in such a model quickly becomes unwieldy, especially to explore its
+posterior Probability Density Function (PDF).
 Simplified spot models, such as the one described in \citet{Lanza2014} where
 only two spots are modelled, have produced successful results; however, such
 relatively inflexible models sacrifice precision.
@@ -155,7 +154,7 @@ for the wavelet method.
 In contrast, the ACF method is much better suited to signals that are
 non-sinusoidal.
 In fact, as long as the signal is approximately periodic the ACF will
-display a peak at the rotation period, no matter its precise shape.
+display a peak at the rotation period, no matter its shape.
 A drawback of the ACF method, however, is that it requires data to be
 evenly-spaced\footnote{\citet{Edelson1988} describe a method for computing
 ACFs for unevenly-spaced data.}, which is not exactly the case with \Kepler\
@@ -188,32 +187,32 @@ parameters which model correlated noise.
 
 GPs are commonly used in the machine learning community and increasingly
 in other scientific fields such as biology, geophysics and cosmology.
-More recently, GPs have been used in stellar and exoplanet fields to capture
-stellar variability or instrumental systematics \citep[see \eg][]{Gibson2012,
-Haywood2014, Dawson2014, Barclay2015, Haywood2015, Evans2015, Rajpaul2015,
-Rajpaul2016, Aigrain2016}.
+More recently, GPs have been used in the stellar and exoplanet fields within
+astronomy, to capture stellar variability or instrumental systematics
+\citep[see \eg][]{Gibson2012, Haywood2014, Dawson2014, Barclay2015,
+Haywood2015, Evans2015, Rajpaul2015, Rajpaul2016, Aigrain2016}.
 They are useful in regression problems involving any stochastic process,
 specifically when the probability distribution for the process is a
 multi-variate Gaussian.
 If the probability of obtaining a dataset is a Gaussian in $N$ dimensions,
 where $N$ is the number of data points, a GP can describe that dataset.
-An in-depth introduction to Gaussian processes is provided by
+An in-depth introduction to Gaussian processes is provided in
 \citet{Rasmussen2005}.
 
 GP models parameterise the covariance between data points by means of a
 parametric kernel function that models the autocorrelation behaviour of the
 signal and defines the form of the covariance matrix.
-As a qualitatively demonstration, we present the time-series
-in Figure \ref{fig:GP_example}:
-the \kepler\ light curve of KIC \kepexample, a relatively active star that
-rotates once every $\sim$ 4 days, with stochastic variability typical of
-\kepler\ FGK stars.
+As a qualitative demonstration, we present the time-series in Figure
+\ref{fig:GP_example}: the \kepler\ light curve of KIC \kepexample.
+This is a relatively active star that rotates once every $\sim$
+\kepexampleperiod\ days, with stochastic variability typical of \kepler\ FGK
+stars.
 Clearly, data points in this light curve are correlated.
 Points close together in time are tightly correlated, and points more
 widely separated are loosely correlated.
-A GP models the way in which this correlation varies with the separation between
-data points; that is, it models not the data directly but rather the {\it
-covariance structure}.
+A GP models this variation in correlation with the separation between data
+points; that is, it models the {\it covariance structure} rather than the data
+directly.
 This lends GPs their flexibility---they can model any time
 series with a similar covariance structure.
 In addition, a very simple function can usually capture the covariance
@@ -227,7 +226,7 @@ KIC \kepexample.
 
 A range of kernel functions can describe stellar variability.
 For example, the simplest and most commonly used kernel function, the `Squared
-Exponential' (SE), defined as follows, adequately fits the
+Exponential' (SE), defined as follows, could adequately fit the
 KIC \kepexample\ light curve:
 \begin{equation}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} \right).
@@ -243,15 +242,17 @@ Another property of the SE kernel function is that it produces functions that
 are infinitely differentiable, making it possible to model a data set
 and its derivatives simultaneously.
 % \citep[see \eg][]{Rajpaul2015}
-
 However, The SE kernel function does not well describe the covariance
 in stellar light curves, nor is it {\it useful} for the problem of
 rotation period inference because it does not capture periodic behaviour.
 Inferring rotation periods thus requires a periodic kernel
-function.  For this reason, we use the `Quasi-Periodic' kernel.
-This kernel is used by \citet{Rasmussen2005} to capture the variable behaviour
-of CO$_2$ emissions from the Mauna Loa volcano in Hawai'i.
-It is defined as
+function.
+For this reason, we use the `Quasi-Periodic' kernel.
+\citet{Rasmussen2005} model QP variability in CO$_2$ concentration on the
+summit of the Mauna Loa volcano in Hawaii \citep[data from][]{Keeling2004}
+using a kernel which is the product of a periodic and a SE kernel: the QP
+kernel.
+This kernel is defined as
 \begin{equation}
 k_{i,j} = A \exp \left[-\frac{(x_i - x_j)^2}{2l^2} -
 \Gamma^2 \sin^2\left(\frac{2\pi}{P}\right) \right].
@@ -308,9 +309,9 @@ covariance kernel function.}
 \end{figure}
 
 This paper is laid out as follows.
-In \textsection \ref{sec:simulations} of this paper we describe the simulated
-light curves used to test the three rotation period recovery
-methods (ACF, LS periodogram and GP).
+In \textsection \ref{sec:simulations} we describe the simulated light curves
+used to test the three rotation period recovery methods (ACF, LS periodogram
+and GP).
 The GP method is described in \textsection \ref{sec:method} and the ACF and LS
 periodogram methods are described in \textsection \ref{sec:comparison}.
 In \textsection \ref{sec:kepler} we apply our method to real \kepler\ data,
@@ -319,7 +320,7 @@ and the results are discussed in \textsection \ref{sec:discussion}.
 \section{Simulated light curves}
 \label{sec:simulations}
 
-In order to test the GP method we attempted to the measure rotation periods of
+In order to test the GP method we attempted to measure the rotation periods of
 a set of simulated light curves.
 We used \naigrain\ light curves generated for the \citet{Aigrain2015}
 `hare and hounds' rotation period recovery experiment.
@@ -340,7 +341,7 @@ produce some additional scatter in the rotation period measurements recovered.
 In future we intend to test whether we can recover differential rotation using
 the GP method and will then use the full set of 1000 light curves.
 The distributions of input parameters used to generate these light curves are
-listed in \citet{Aigrain2015}.
+listed in table \ref{tab:simulation_parameters}.
 Light curves were simulated with a real \Kepler\ long-cadence time array:
 one data point every thirty minutes over a four year duration.
 90\% of the rotation periods of the simulations were randomly drawn from a
@@ -350,16 +351,11 @@ A histogram of the \naigrain\ solid-body rotation periods is shown in figure
 \ref{fig:period_hist}.
 The light curves were also generated with a range of stellar inclination
 angles, activity levels, spot lifetimes and more.
-Once simulated, the light curves were added to real \kepler\ light curves with
-no obvious astrophysical variability in order to preserve the noise properties
-of the time series.
+Once simulated, the light curves were added to real, quiet \kepler\ light
+curves --- with no obvious astrophysical variability --- in order to preserve
+the noise properties of the time series.
 Figure \ref{fig:demo_lc} shows an example of a simulated light curve with a
-period of \aigrainexampleperiod days.
-
-The ranges and distributions of the physical stellar parameters used in the
-simulated light curves are tabulated below, in table
-\ref{tab:simulation_parameters}, and figure \ref{fig:period_hist} shows the
-distribution of rotation periods in the \citet{Aigrain2015} sample.
+period of \aigrainexampleperiod\ days.
 
 \begin{table*}
 \begin{center}
@@ -409,15 +405,17 @@ simulated light curves in \citet{Aigrain2015}.}
 In order to recover the rotation period of a simulated light curve using
 Gaussian processes, we sample the following posterior PDF:
 \begin{equation}
-p({\bm \theta}\,|\,y) \propto \mathcal L(y\,|\,{\bm \theta}) p({\bm \theta}),
+p({\bm \theta}\,|\,y) \propto p(y\,|\,{\bm \theta}) p({\bm \theta}),
 \end{equation}
 \label{eq:posterior}
 where $y$ are the light curve data, $\bm \theta$ are the hyperparameters
-of the kernel described in equation \ref{eq:QP}, $\mathcal L$ is the
-GP likelihood function, and $p({\bm \theta})$ is the prior on the
-hyperparameters.  The GP likelihood is similar to the simple Gaussian likelihood
-function used for optimisation problems where the uncertainties are
-Gaussian and uncorrelated. The latter can be written
+of the kernel described in equation \ref{eq:QP}, $p(y\,|\,{\bm \theta}) =
+\mathcal{L}$, is the GP likelihood function, and $p({\bm \theta})$ is the prior
+ on the hyperparameters.
+The GP likelihood is similar to the simple Gaussian likelihood function used
+for optimisation problems where the uncertainties are Gaussian and
+uncorrelated.
+The latter can be written
 \begin{equation}
 \ln \mathcal{L} = -\frac{1}{2}\sum_{n=1}^N\frac{(y_n-\mu)^2}{\sigma_n^2}
     - \frac{N}{2}\ln(2\pi\sigma_n^2),
@@ -616,7 +614,7 @@ We also compute the Median Relative Deviation (MRD), as a percentage.
 These metrics are presented for the three different methods tested in this
 paper in table \ref{tab:MADs}.
 The informative and uninformative prior versions of the GP method have MRDs of
-\percentgpMAD\ \% and \percentgpMADnp \% respectively.
+\percentgpMAD \% and \percentgpMADnp \% respectively.
 The marginal posterior distributions of the QP kernel hyperparameters for the
 example simulated light curve in figure \ref{fig:demo_lc}, are shown in
 figure \ref{fig:gp_posteriors}.
@@ -626,11 +624,6 @@ figure \ref{fig:gp_posteriors}.
 \includegraphics[width=6in, clip=true]{figures/25.png}
 \caption{Marginal posterior PDFs of the QP GP model parameters, fit to the
     light curve in figure \ref{fig:demo_lc}.
-$\sigma$ is an
-additional white noise term added to the diagonal elements of the covariance
-matrix. It is the fraction by which the observational uncertainties have been
-underestimated. If the uncertainties reported on the data are too small, this
-parameter will be non-zero.
     The green line in the period panel shows the injected period.
     This figure was made using \texttt{corner.py} \citep{Corner}.}
 \label{fig:gp_posteriors}
@@ -638,7 +631,7 @@ parameter will be non-zero.
 \end{figure*}
 
 
-\section{Comparison with standard methods}
+\section{Comparison with literature methods}
 \label{sec:comparison}
 \subsection{ACF}
 
@@ -734,7 +727,7 @@ The period of the highest peak in the periodogram was adopted as the rotation
 period.
 The resulting recovered rotation periods are plotted as a function of the true
 periods in figure \ref{fig:pgram_compare}.
-The MRD of the pgram-recovered periods is \percentpgramMAD\ \% (see table
+The MRD of the pgram-recovered periods is \percentpgramMAD\% (see table
 \ref{tab:MADs} for a side-by-side comparison with the other methods).
 There is a large number of drastically overestimated periods recovered using
 the periodogram.
@@ -763,10 +756,10 @@ In many cases a large peak at a long period was present in the periodogram,
 \begin{tabular}{lccc}
 Method & MAD & MRD \\
     \hline
-    ACF & \acfMAD\ days & \percentacfMAD\ \% \\
-    LS periodogram & \pgramMAD\ days & \percentpgramMAD\ \% \\
-    GP (no prior) & \gpMADnp\ days & \percentgpMADnp\ \% \\
-    GP (acf prior) & \gpMAD\ days & \percentgpMAD\ \% \\
+    ACF & \acfMAD\ days & \percentacfMAD \% \\
+    LS periodogram & \pgramMAD\ days & \percentpgramMAD \% \\
+    GP (no prior) & \gpMADnp\ days & \percentgpMADnp \% \\
+    GP (acf prior) & \gpMAD\ days & \percentgpMAD \% \\
 \end{tabular}
 \end{center}
 \end{table*}
@@ -849,13 +842,13 @@ of the measured periods lie within 1 $\sigma$ of the true period.
 50\% lie within 2 $\sigma$ and 66\% within 3 $\sigma$.
 The largest outlier is 114 $\sigma$ away from the true value.
 In the majority of these cases the uncertainties are underestimated due to the
-multi-modal nature of the period posterior PDFs which makes them difficult to
+multi-modal nature of the period posterior PDFs, which makes them difficult to
 sample.
 The underestimated uncertainties can also be attributed to the model choice.
 Although a GP model is more appropriate than a sinusoid, it is still an
 imperfect, effective model.
-A perfect physical model of the star would produce better results with more
-representative uncertainties.
+A perfect physical model of the star would still produce better results with
+more representative uncertainties.
 
 The QP kernel function represents a simplistic effective model of a stellar
 light curve.
@@ -937,8 +930,8 @@ of the \kepler\ spacecraft.
 These are unlikely to be periodic and, again, may produce unusual combinations
 of hyperparameters.
 This is something that we hope to test in future.
-In addition to this, there are several other aspects of the GP method we hope
-to test in future, listed as follows:.
+In addition to this, there are several other aspects of the GP method we are
+continuing to develop, listed as follows:.
 \begin{itemize}
 \item{To perform model selection with different kernel functions. Again, these
 tests have not been performed due to the cost of calculating the fully
@@ -1000,7 +993,7 @@ parameters of interest will insure that the periodic signal is preserved.}
 \section{Conclusion}
 
 We attempted to recover the rotation periods of \naigrain\ simulated
-\kepler-like light curves for solid-body rotators in \citet{Aigrain2015} using
+\kepler-like light curves for solid-body rotators \citep{Aigrain2015} using
 three different methods: a new Gaussian process method, a Lomb-Scargle
 periodogram method and an autocorrelation function method.
 We demonstrate that the GP method produces the most accurate rotation periods
@@ -1018,32 +1011,34 @@ method works well on real \kepler\ data.
 Unlike the ACF and LS periodogram methods, the GP method provides posterior
 PDF samples which can be used to estimate rotation periods uncertainties.
 Although an improvement on competing methods, these uncertainties are still
-approximate because is many cases the posterior PDFs of the parameters are
+approximate because in many cases the posterior PDFs of the parameters are
 multi-modal.
-In addition, although the GP model used here is clearly a good one, it is
-still only an effective model, not an accurate physical model.
-It can only capture the posterior PDF for the periodic component of the
-covariance matrix, not the rotation period of a physical star.
 If it were possible to run an MCMC sampler for an infinite number of steps,
 the entire posterior PDF would eventually be sampled, and a more accurate
 uncertainty would result.
 Unfortunately, due to realistic computational resources and the limitations of
 MCMC sampling techniques for multi-modal posteriors, we are not always able to
 map out the entire posterior PDFs.
+In addition, although the GP model used here is clearly a good one, it is
+still only an effective model, not an accurate physical model.
+It can only capture the posterior PDF of the periodic component of the
+covariance matrix, not the actual rotation period of a physical star.
 We find that only a quarter of the reported uncertainties are accurate.
 
-The main aim of this work was to develop a rotation period inference method
-that is probabilistic.
+The main aim of this work is to develop a probabilistic rotation period
+inference method.
 Probabilistic periods are necessary for hierarchical Bayesian inference,
 particularly when performing population analysis.
 This new GP method is capable of generating a catalogue of probabilistic
-rotation periods which could, for example, reveal the period distribution of
+rotation periods which could, for example, reveal the period distribution
 (and therefore potentially the age distribution) of stars in the Milky Way.
-There is still room for improvement of this model since that the uncertainty
-estimates are not yet truly representative and it is still only an `effective'
-model, not a physical one, but it is probabilistic, it provides more accurate
-periods and, we argue, is the best method for rotation period inference
-currently available.
+There is still room for improvement since the uncertainty estimates are not
+yet truly representative and it is still only an `effective' model, not a
+physical one.
+However, it is probabilistic and provides more accurate periods than
+alternative methods.
+We therefore argue that the GP method is the best method for rotation period
+inference currently available.
 
 % acknowledgements
 This research was funded by the Simons Foundation and the Leverhulme Trust.
