--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -117,6 +117,7 @@ Because this method delivers posteriors PDFs it will enable hierarchical
 \end{abstract}
 
 \section{Introduction}
+\label{sec:intro}
 
 The brightness of a spotted, rotating star often varies in a non-sinusoidal and
 Quasi-Periodic (QP) manner, due to active regions on its surface which
@@ -706,10 +707,10 @@ prior between 0.5\,d and 100\,d, and an ACF-informed prior
 (Section \ref{sec:period_prior}).
 
 Figures \ref{fig:compare_mcmc_acfprior} and \ref{fig:compare_mcmc_noprior}
-summarize the results of this MCMC fitting procedure compared to the injected
+summarize our results compared to the injected
 `true' stellar rotation periods, for the uninformed and ACF-informed priors on
 period, respectively.
-In order to assess the performance of the GP and other period recovery
+To assess the performance of the QP-GP and other period recovery
 methods, we compute Median Absolute Deviations (MADs) of the results, relative
 to the input periods.
 We also compute the Median Relative Deviation (MRD), as a percentage.
@@ -794,20 +795,20 @@ The MAD of these results is 0.48 in log-space, \ie\ 1.61 days.
 \label{sec:comparison}
 \subsubsection{ACF}
 
-We measured an ACF-based period for each light curve following the method of
+We measure an ACF-based period for each light curve, 
+following the method of
 \citet{Mcquillan2013}.
-An ACF is calculated for each light curve and smoothed by convolving with a
-Gaussian with $\sigma=9$ days.
-A rotation period is estimated as the lag-time of the highest peak in the ACF,
-less than 100 days.
-This is not always the first peak: the second can be larger than the first if
-there are two active regions at or near opposite longitudes on the surface of
-the star---producing a light curve with two dips per rotation period.
-We restrict our search to periods less than 100 days because this is the
-maximum period that is realistically recoverable in \kepler\ light curves ---
-instrumental noise significantly distorts signals on longer timescales.
-An example ACF of the light curve in figure~\ref{fig:demo_lc} is shown
-in figure \ref{fig:demo_acf}.
+After calculating the ACF for a light curve, we smooth it by convolving with a
+Gaussian filter ($\sigma=9$\,d), and select the rotation period as the
+lag-time of the highest peak in the ACF less than 100\,d.
+This is not always the first peak---the second can be larger than the first if
+two active regions are at or near opposite longitudes on the surface of
+the star, producing a light curve with two dips per rotation period.
+We restrict our search to periods less than 100\,d because instrumental
+noise and light-curve systematics significantly distort \kepler\ light 
+curves on longer timescales, rendering longer periods realistically unrecoverable.
+Figure \ref{fig:demo_lc} contains an example ACF of the light curve in 
+Figure \ref{fig:demo_acf}.
 
 \begin{figure}
 \begin{center}
@@ -822,46 +823,41 @@ light curve (\aigrainexampleperiod\ days).}
 \end{center}
 \end{figure}
 
-The ACF method has proven to be extremely useful for measuring rotation
-periods.
+The ACF method has proven extremely useful for measuring rotation periods.
 The catalogue of rotation periods of \Kepler\ stars provided in
 \citet{Mcquillan2013} has been widely used by the community and has provided
 ground-breaking results for stellar and exoplanetary science.
-The results of the ACF method as tested in \citet{Aigrain2015} were positive
-(see, for example their figure 8) as it produced a large number of accurate
-rotation period measurements.
-Another advantage of the ACF method is that it is fast to implement.
-A clear disadvantage however, as already mentioned above, are the poorly
-defined uncertainties for rotation periods estimated using an autocorrelation
-function.
-This is related to the fact that ACF period detection is a non-probabilistic
-method, another drawback of ACF periods.
+The method also performed well in the \citet{Aigrain2015}
+recovery experiment,
+producing a large number of accurate rotation period measurements
+(see, e.g., their Figure 8).  
+Another advantage is its fast implementation speed.
+However, because the ACF method is non-probabilistic, ACF-estimated
+rotation period uncertainties are poorly defined---a clear 
+disadvantage.
 
-We applied the ACF method to the sample of \naigrain\ simulated light
+We apply the ACF method to the sample of \naigrain\ simulated light
 curves.
-Periods measured using the ACF method are plotted against the original
-rotation period values used to generate the light curves in figure
-\ref{fig:compare_acf}.
-The $2n$ and $\frac{1}{2}n$ harmonic lines are shown as dashed lines.
+Figure \ref{fig:compare_acf} shows ACF-measured versus true rotation
+periods, with the $2n$ and $\frac{1}{2}n$ harmonic lines as dashed lines.
 The MRD of the ACF-recovered periods is \percentacfMAD\ \% (see table
 \ref{tab:MADs} for a side-by-side comparison with the other methods).
-The agreement between the injected and recovered rotation periods is good in
-general, however some rotation periods are drastically over- and
-underestimated.
-Of the points clustered close to the $x=y$ line, more fall slightly below it
-than above it, \ie\ rotation periods are preferentially underestimated.
-This is a feature of the peak position measurement method that is performed on
-the ACF.
+The injected and recovered rotation periods generally agree well,
+though with a few drastic over- or underestimates.
+Additionally, of the points clustered close to the 1:1 line, 
+more fall slightly below than above it, \ie\ 
+rotation periods are preferentially underestimated.
+This stems from how peak positions in the ACF are measured.
 ACFs of stellar light curves have similar functional forms to the QP kernel
-function in equation \ref{eq:QP}: periodic functions added to decaying
+function in Equation \ref{eq:QP}: periodic functions added to decaying
 exponentials.
-In such functions the peak positions can be shifted towards the left, the
-short period end, because the decaying exponential raises the left side of
+In such functions the peak positions can be shifted towards the left 
+(towards shorter periods), because the decaying exponential raises the left side of
 each peak more than the right.
-It is possible to model this effect, however the standard practice is to
-simply measure the peak position without taking it into account.
-We adopt the standard practice approach here in order to provide a comparison
-between our new method and that used largely in the literature.
+It is possible to model this effect; however, standard practice 
+simply measures the peak position without taking it into account.
+We adopt this standard practice here to faithfully compare
+our new method to that used in the literature.
 
 \begin{figure*}
 \begin{center}
