--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -1245,7 +1245,7 @@ inference currently available.
 This research was funded by the Simons Foundation and the Leverhulme Trust.
 TDM is supported by NASA grant NNX14AE11G, and acknowledges the 
 hospitality of the Institute for Advanced Study, 
-where part of this work was completed.
+where part of this work was completed. VR thanks Merton College and the National Research Foundation of South Africa for financial support.
 Some of the data presented in this paper were obtained from the Mikulski
 Archive for Space Telescopes (MAST).
 STScI is operated by the Association of Universities for Research in
